--- a/archivo2.html
+++ b/archivo2.html
@@ -10,5 +10,9 @@
 <body>
     <h1>nuevo blogpost</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cumque aspernatur itaque praesentium aliquam, earum iure nulla id corporis cum adipisci dolore quibusdam non quis at facilis eius quasi repellat!</p>
+    <BR>
+    <HR><HR><hr>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolores odit quaerat ratione iure veritatis at necessitatibus nobis labore provident eveniet eum rerum cumque voluptas reprehenderit et, a aperiam eligendi.</h2>
 </body>
+
 </html>
