se añade la caecera

--- a/archivo2.html
+++ b/archivo2.html
@@ -13,6 +13,9 @@
     <BR>
     <HR><HR><hr>
         <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolores odit quaerat ratione iure veritatis at necessitatibus nobis labore provident eveniet eum rerum cumque voluptas reprehenderit et, a aperiam eligendi.</h2>
-</body>
+    <hr><hr>
+    <h2>head</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores culpa voluptatum voluptas a veritatis maxime nisi, saepe in quo minus animi aliquam expedita ipsa. Minima similique recusandae alias facere harum!</p>
+    </body>
 
 </html>
