--- a/archivo2.html
+++ b/archivo2.html
@@ -16,6 +16,13 @@
     <hr><hr>
     <h2>head</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores culpa voluptatum voluptas a veritatis maxime nisi, saepe in quo minus animi aliquam expedita ipsa. Minima similique recusandae alias facere harum!</p>
-    </body>
+<hr> 
+<h2>head2</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores culpa voluptatum voluptas a veritatis maxime nisi, saepe in quo minus animi aliquam expedita ipsa. Minima similique recusandae alias facere harum!</p>
+<hr>
+<h2>head3</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores culpa voluptatum voluptas a veritatis maxime nisi, saepe in quo minus animi aliquam expedita ipsa. Minima similique recusandae alias facere harum!</p>
+<hr>   
+</body>
 
 </html>
