se agregan parrafos y se caia la tipografia

--- a/archivo2.html
+++ b/archivo2.html
@@ -12,7 +12,15 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cumque aspernatur itaque praesentium aliquam, earum iure nulla id corporis cum adipisci dolore quibusdam non quis at facilis eius quasi repellat!</p>
     <BR>
     <HR><HR><hr>
+        
         <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolores odit quaerat ratione iure veritatis at necessitatibus nobis labore provident eveniet eum rerum cumque voluptas reprehenderit et, a aperiam eligendi.</h2>
-</body>
+        <hr>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae sapiente tenetur libero dolorum numquam porro, quos nemo beatae nostrum, officia rerum nisi exercitationem fuga vitae dolorem deleniti! Expedita, veniam dolores.</p>
+        <hr>
+        <br>
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus consequatur, modi accusamus, quasi dolores natus mollitia suscipit ut reprehenderit, et recusandae hic nisi labore autem nobis quidem illo! Blanditiis, quam.
+        </p>
+    </body>
 
 </html>
