--- a/archivo2.html
+++ b/archivo2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/estilos.css"
 </head>
 <body>
-    <h1>nuevo blogpost</h1>
+    <h1>bienvenido</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cumque aspernatur itaque praesentium aliquam, earum iure nulla id corporis cum adipisci dolore quibusdam non quis at facilis eius quasi repellat!</p>
     <BR>
     <HR><HR><hr>
